--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "engines":{
-    "node":"v18.16.0",
-    "npm" :"9.5.1"
+  "engines": {
+    "node": "v18.16.0",
+    "npm": "9.5.1"
   },
-
   "scripts": {
     "client-install": "npm install --prefix client",
     "server": "nodemon server.js",
@@ -21,6 +20,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
